<resources>
    <string name="app_name">123</string>
    <string name="hi">Hello World11!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone">+7 (___) ___-__-__</string>
    <string name="action_get_code">Получить код</string>
    <string name="login_description">Мы отправим на номер SMS-сообщение с кодом подтверждения</string>
    <string name="login">войти или зарегистрироваться</string>
    <string name="agreement">При входе вы соглашаетесь с <a href="http://www.cleverfinger.com.au/user-guide/">условиями</a></string>
    <string name="open_brokerage_account">Откройте брокерский счёт быстро и удобно.</string>
    <string name="action_open_account">Открыть счёт</string>
    <string name="already_client">Я уже клиент</string>
    <string name="open_account_label">открытие</string>
    <string name="broker_label">Брокер</string>
    <string name="feedback_label">Обратная связь</string>
    <string name="full_name">Ваше имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email_address">Ваш e-mail адрес</string>
    <string name="accept_agreement">Я даю согласие на обработку своих персональных данных. С <a href="/dsadsa">политикой обеспечения безопасности</a> персональных данных САО \"РЕСО-Гарантия\" ознакомлен.</string>
    <string name="sample_name">Иванов Иван</string>
    <string name="sample_phone">+7 (904) 519-20-75</string>
    <string name="sample_email">ivan@mail.ru</string>
    <string name="comment">Комментарий</string>
    <string name="settings_label">Настройки</string>
    <string name="push_notifications_setting_label">Push - уведомления</string>
    <string name="city_detection_auto_label">Определять город автоматически</string>
    <string name="biometric_auth_setting_label">Вход по отпечатку пальца</string>
    <string name="reset_auth">Сбросить авторизацию</string>
</resources>