<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/menu"
                    android:layout_width="35dp"
                    android:layout_height="27dp"
                    android:background="@android:color/holo_green_dark"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/ic_menu"
                    android:tint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/settings_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:divider="@android:color/darker_gray"
                android:orientation="vertical"
                android:showDividers="middle">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/push_notifications_setting_label" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/city_detection_auto_label" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/biometric_auth_setting_label" />

            </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="34dp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/reset_auth"
                    android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>